--- a/pset7/PSET7-ObjectOriented.ipynb
+++ b/pset7/PSET7-ObjectOriented.ipynb
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a314a986",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Student:\n",
-    "    def __init__(student_id, major, university):\n",
+    "    def __init__(self, student_id, major, university):\n",
     "        self.student_id = student_id\n",
     "        self.major = major\n",
     "        self.university = university\n",
@@ -249,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "db29140b-50a4-46c4-a77e-6aed00bb5068",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Project(Student):\n",
-    "    def __init__(self, student_id, major, university, project_id):\n",
+    "    def __init__(self, student_id, major, university, project_id, data_points):\n",
     "        super().__init__(student_id, major, university)\n",
     "        self.project_id = project_id\n",
-    "        self.data_points = []\n",
+    "        self.data_points = data_points\n",
     "        self.__analysis_results = {}\n",
     "        self.__active = True\n",
     "\n",
@@ -303,11 +303,11 @@
     "            if n == 0:\n",
     "                raise ZeroDivisionError(\"No data points available for analysis.\")\n",
     "\n",
-    "            # Mean\n",
+    "            #mean\n",
     "            total = sum(self.data_points)\n",
     "            mean = total / n\n",
     "\n",
-    "            # Median\n",
+    "            #median\n",
     "            sorted_data = sorted(self.data_points)\n",
     "            if n % 2 == 1:\n",
     "                median = float(sorted_data[n // 2])\n",
@@ -316,10 +316,10 @@
     "                mid2 = sorted_data[n // 2]\n",
     "                median = (mid1 + mid2) / 2.0\n",
     "\n",
-    "            # Sample Variance\n",
+    "            #sample variance\n",
     "            squared_diffs = [(x - mean) ** 2 for x in self.data_points]\n",
     "            if n == 1:\n",
-    "                variance = 0.0  # sample variance undefined, assume 0\n",
+    "                variance = 0.0  \n",
     "            else:\n",
     "                variance = sum(squared_diffs) / (n - 1)\n",
     "\n",
@@ -331,16 +331,11 @@
     "\n",
     "        except ZeroDivisionError:\n",
     "            print(\"Cannot perform analysis: No data points available.\")\n",
+    "    def get_results(self):\n",
+    "\n",
+    "        return self.__analysis_results\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb61d4f7-c20b-4227-ad26-3a1c3c8e712d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -353,10 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "07d57365-3c20-4d85-b192-07754d5dabdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student id is : 1001\n",
+      "Major: Data Science\n",
+      "University:Harvard\n"
+     ]
+    }
+   ],
    "source": [
     "#Example 1- Test Student Class constructor with student_id 1001, major \"Data Science, and university Harvard\"\n",
     "\n",
@@ -367,10 +372,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7af7127e-ae3d-47aa-b0f6-35b9b64448c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student id is : 1001\n",
+      "Major: Data Science\n",
+      "University:Harvard\n",
+      "project_id:1\n",
+      "data_points : [65, 75, 95, 99]\n",
+      "is_active:True\n"
+     ]
+    }
+   ],
    "source": [
     "#Example 2- Test Project Class constructor with student_id 1001, major \"Data Science, university Harvard, project_id 1, \n",
     "#data_points [65,75,95,99]\"\n",
@@ -382,22 +400,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6baae78b-7a84-4e65-97ce-fe4017e1ccd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 3 Passed: Project object created successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "#Test that a Project object can be instantiated with valid input values\n",
-    "my_project2 = Project(101, \"Data Science\", \"University of Illinois\", 501)\n",
+    "my_project2 = Project(101, \"Data Science\", \"University of Illinois\", 501, [1, 2, 3])\n",
     "print(\"Test Case 3 Passed: Project object created successfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0d46c359-44ba-46ba-9fcd-3db0a6d48b73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 4 Passed: Data added: [1, 2, 3, 10.0, 20.0, 30.0]\n"
+     ]
+    }
+   ],
    "source": [
     "#Test that numeric data can be added successfully\n",
     "my_project2.add_data([10, 20, 30])\n",
@@ -406,10 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e6f87432-ea3e-4eb3-b63d-88b06035e7af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 5 Passed: TypeError raised for invalid data.\n"
+     ]
+    }
+   ],
    "source": [
     "#test that add_data raises an error when given non-numeric input\n",
     "try:\n",
@@ -421,10 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "306452e0-6f6a-4627-9bdb-8d7a9a21e8cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 6 Passed: Analysis results: {'mean': 11.0, 'median': 6.5, 'variance': 137.6}\n"
+     ]
+    }
+   ],
    "source": [
     "#test that perform_analysis() works and stores results correctly\n",
     "my_project2.perform_analysis()\n",
@@ -436,11 +486,19 @@
    "execution_count": null,
    "id": "0fa3228b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 7 Passed: No crash on empty data.\n"
+     ]
+    }
+   ],
    "source": [
     "#test that perform_analysis() handles empty data\n",
-    "my_project3 = Project(2, \"Math\", \"University of Kansas\", 109)\n",
-    "my_project3.perform_analysis()  # Should print message\n",
+    "my_project3 = Project(2, \"Math\", \"University of Kansas\", 109, [1, 2, 3])\n",
+    "my_project3.perform_analysis()\n",
     "print(\"Test Case 7 Passed: No crash on empty data.\")"
    ]
   },
@@ -464,10 +522,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3155b352-9639-48c4-a61d-5a3da37b91c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student id : 1000\n",
+      "Major: Computer Science\n",
+      "University:HARVARD\n",
+      "project_id:1\n",
+      "data_points : [65, 75, 95, 99]\n",
+      "is_active:True\n",
+      "analysis results :{'mean': 83.5, 'median': 85.0, 'variance': 262.33}\n",
+      "\n",
+      "Student id : 1001\n",
+      "Major: Computer Science\n",
+      "University:MIT\n",
+      "project_id:2\n",
+      "data_points : [95, 35, 75, 90, 91]\n",
+      "is_active:True\n",
+      "analysis results :{'mean': 77.2, 'median': 90.0, 'variance': 614.2}\n",
+      "\n",
+      "Student id : 1003\n",
+      "Major: Data Science\n",
+      "University:Cornell\n",
+      "project_id:3\n",
+      "data_points : [75, 85, 95, 99, 33]\n",
+      "is_active:True\n",
+      "analysis results :{'mean': 77.4, 'median': 85.0, 'variance': 702.8}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test1 = [(1000, 'Computer Science', 'HARVARD', 1, [65,75,95,99]),(1001, 'Computer Science', 'MIT', 2, [95,35,75,90,91]),\\\n",
     "         (1003,'Data Science', 'Cornell', 3, [75,85,95,99,33])]\n",
@@ -500,10 +589,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8d9950ad-7528-492b-b6f2-c92981fb8d61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "analysis results before : {'mean': 83.5, 'median': 85.0, 'variance': 262.33}\n",
+      "analysis results after: {'mean': 71.2, 'median': 75.0, 'variance': 953.2}\n"
+     ]
+    }
+   ],
    "source": [
     "test = (1000, 'Computer Science', 'HARVARD', 1, [65,75,95,99])\n",
     "project = Project(test[0],test[1],test[2],test[3],test[4])\n",
@@ -532,10 +630,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "dd6ea14a-46f6-4e43-ada8-d63a18c1dda0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value of active at initialization: True\n",
+      "value of active after calling set method: False\n"
+     ]
+    }
+   ],
    "source": [
     "test = (1000, 'Computer Science', 'HARVARD', 1, [65,75,95,99])\n",
     "project = Project(test[0],test[1],test[2],test[3],test[4])\n",
@@ -562,10 +669,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "497d0c21-8a5c-4abf-82cb-da965de35c29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test #1 : Test perform analysis if the data points is an empty list.\n",
+      "Cannot perform analysis: No data points available.\n"
+     ]
+    }
+   ],
    "source": [
     "test1 = (1000, 'Computer Science', 'HARVARD', 1, [])\n",
     "\n",
@@ -588,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "25e783fc-a277-43d7-837e-c3308b0a5b5b",
    "metadata": {},
    "outputs": [],
@@ -609,10 +725,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "608837b8-49e7-4481-80e5-272ed593cba7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Input must be a number or a list of numbers.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m test3 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputer Science\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHARVARD\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m, [\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m100\u001b[39m])\n\u001b[1;32m      2\u001b[0m project \u001b[38;5;241m=\u001b[39m Project(test3[\u001b[38;5;241m0\u001b[39m],test3[\u001b[38;5;241m1\u001b[39m],test3[\u001b[38;5;241m2\u001b[39m],test3[\u001b[38;5;241m3\u001b[39m],test3[\u001b[38;5;241m4\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m project\u001b[38;5;241m.\u001b[39madd_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxyz\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[26], line 24\u001b[0m, in \u001b[0;36mProject.add_data\u001b[0;34m(self, new_data)\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll elements in the list must be numeric.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 24\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput must be a number or a list of numbers.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Input must be a number or a list of numbers."
+     ]
+    }
+   ],
    "source": [
     "test3 = (1000, 'Computer Science', 'HARVARD', 3, [100,100,100])\n",
     "project = Project(test3[0],test3[1],test3[2],test3[3],test3[4])\n",
@@ -651,12 +780,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2ff43793-f079-43bb-a577-b444488cb441",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>midterm_scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   midterm_scores\n",
+       "0              96\n",
+       "1              90\n",
+       "2              85"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "midterm_scores = [96,90,85]\n",
@@ -690,12 +879,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6b8084e2-225b-4c1f-a7c8-20ac1add5c61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**1. class name is pandas.dataframe and the parameters are midterm_scores and columns.**\n",
+    "\n",
+    "**2. the attribure is shape**\n",
+    "\n",
+    "**3. the method is sort_values and the method parameters are by='midterm_scores' and ascending=False**\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -748,7 +942,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -762,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
