--- a/pset-8/PSET8.ipynb
+++ b/pset-8/PSET8.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0fa3228b",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "#function 1: Feedback Analysis\n",
+    "#function: Feedback Analysis\n",
     "def feedback_analysis(df_feedback):\n",
     "    #separate scores by platform\n",
     "    ios_scores = df_feedback[df_feedback['product'] == 'iOS']['feedback_score'].values\n",
@@ -142,7 +142,7 @@
     "- Test Statistic: 1.9033888211703986\n",
     "- P-value: 0.05756609386358278\n",
     "\n",
-    "Since the p-value is greater than 0.05, we fail to reject the null hypothesis. This means we do **not** have sufficient evidence to say that average customer satisfaction is significantly different between iOS and Android apps."
+    "Since the p-value is greater than 0.05, we fail to reject the null hypothesis. This means we **do not have sufficient evidence** to say that average customer satisfaction is significantly different between iOS and Android apps."
    ]
   },
   {
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "#function 2: Sales Analysis\n",
+    "#function: Sales Analysis\n",
     "def sales_analysis(df_sales):\n",
     "    # Split data before and after March 2023 campaign\n",
     "    before = df_sales[df_sales['date'] < '2023-03-01']['sales'].values\n",
@@ -206,7 +206,7 @@
     "- Test Statistic: 0.16642710322927962\n",
     "- P-value: 0.8679489234386756\n",
     "\n",
-    "Since the p-value is significantly greater than 0.05, we fail to reject the null hypothesis. There is **no statistically significant** evidence that the marketing campaign had a measurable impact on sales."
+    "Since the p-value is significantly greater than 0.05, we fail to reject the null hypothesis. This means we **do not have sufficient evidence** that the marketing campaign had a measurable impact on sales."
    ]
   },
   {
@@ -241,16 +241,16 @@
     }
    ],
    "source": [
-    "# Function 3: Seasonal Sales Analysis\n",
+    "#function: Seasonal Sales Analysis\n",
     "def seasonal_analysis(df_sales):\n",
-    "    # Define summer and winter months\n",
+    "    #define summer and winter months\n",
     "    summer_months = [6, 7, 8]\n",
     "    winter_months = [12, 1, 2]\n",
     "\n",
     "    summer_sales = df_sales[df_sales['date'].dt.month.isin(summer_months)]['sales'].values\n",
     "    winter_sales = df_sales[df_sales['date'].dt.month.isin(winter_months)]['sales'].values\n",
     "\n",
-    "    # Perform independent t-test\n",
+    "    #perform independent t-test\n",
     "    statistic, p_val = stats.ttest_ind(summer_sales, winter_sales, equal_var=False)\n",
     "\n",
     "    print(\"Seasonal analysis t-test statistic:\", statistic)\n",
@@ -258,7 +258,7 @@
     "\n",
     "    return statistic, p_val\n",
     "\n",
-    "# Run seasonal analysis\n",
+    "#run seasonal analysis\n",
     "seasonal_stat, seasonal_p = seasonal_analysis(sales_df)\n",
     "\n"
    ]
@@ -275,8 +275,7 @@
     "- Test Statistic: 0.09956961638905915\n",
     "- P-value: 0.9207644588060664\n",
     "\n",
-    "Since the p-value is greater than 0.05, we fail to reject the null hypothesis. There is **no significant seasonal variation** in sales between summer and winter.\n",
-    "\"\"\".format(seasonal_stat, seasonal_p)"
+    "Since the p-value is greater than 0.05, we fail to reject the null hypothesis. This means we **do not have sufficient evidence** of seasonal variation in sales between summer and winter."
    ]
   },
   {
@@ -314,7 +313,7 @@
    "source": [
     "#function Feedback Consistency Analysis\n",
     "def consistency_analysis(df_feedback):\n",
-    "    # Filter months of interest\n",
+    "    #filter months of interest\n",
     "    df_feedback['month'] = df_feedback['date'].dt.month\n",
     "    selected_months = {1: 'Jan', 5: 'May', 9: 'Sep', 12: 'Dec'}\n",
     "    filtered = df_feedback[df_feedback['month'].isin(selected_months.keys())]\n",
@@ -325,7 +324,7 @@
     "    sep = filtered[filtered['month'] == 9]['feedback_score'].values\n",
     "    dec = filtered[filtered['month'] == 12]['feedback_score'].values\n",
     "\n",
-    "    # Perform one-way ANOVA\n",
+    "    #perform one-way ANOVA\n",
     "    statistic, p_val = stats.f_oneway(jan, may, sep, dec)\n",
     "\n",
     "    print(\"Feedback consistency ANOVA statistic:\", statistic)\n",
@@ -333,7 +332,7 @@
     "\n",
     "    return statistic, p_val\n",
     "\n",
-    "# Run consistency analysis\n",
+    "#run consistency analysis\n",
     "consistency_stat, consistency_p = consistency_analysis(feedback_df)\n",
     "\n"
    ]
@@ -350,7 +349,7 @@
     "- ANOVA Statistic: 0.3146823675455494\n",
     "- P-value: 0.8147473590881886\n",
     "\n",
-    "Since the p-value is greater than 0.05, we conclude that there is **no statistically significant difference** in average feedback scores across these months."
+    "Since the p-value is greater than 0.05, we conclude that there is no statistically significant difference in average feedback scores across these months."
    ]
   },
   {
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "55ae4778",
    "metadata": {},
    "outputs": [
@@ -386,24 +385,24 @@
     }
    ],
    "source": [
-    "# Function 5: Sales and Feedback Correlation Analysis\n",
+    "#function: Sales and Feedback Correlation Analysis\n",
     "def corr_analysis(df_feedback, df_sales):\n",
-    "    # Aggregate feedback scores by date\n",
+    "    #aggregate feedback scores by date\n",
     "    avg_feedback = df_feedback.groupby('date')['feedback_score'].mean().reset_index()\n",
     "    avg_feedback.columns = ['date', 'avg_feedback_score']\n",
     "\n",
-    "    # Aggregate sales by date\n",
+    "    #aggregate sales by date\n",
     "    total_sales = df_sales.groupby('date')['sales'].sum().reset_index()\n",
     "\n",
-    "    # Merge both datasets on date\n",
+    "    #merge both datasets on date\n",
     "    merged = pd.merge(avg_feedback, total_sales, on='date')\n",
     "\n",
-    "    # Label high vs. low feedback\n",
+    "    #label high vs. low feedback\n",
     "    threshold = merged['avg_feedback_score'].median()\n",
     "    high_feedback = merged[merged['avg_feedback_score'] > threshold]['sales']\n",
     "    low_feedback = merged[merged['avg_feedback_score'] <= threshold]['sales']\n",
     "\n",
-    "    # Perform t-test\n",
+    "    #perform t-test\n",
     "    statistic, p_val = stats.ttest_ind(high_feedback, low_feedback, equal_var=False)\n",
     "\n",
     "    print(\"Correlation analysis t-test statistic:\", statistic)\n",
@@ -411,7 +410,7 @@
     "\n",
     "    return statistic, p_val\n",
     "\n",
-    "# Run correlation analysis\n",
+    "#run correlation analysis\n",
     "corr_stat, corr_p = corr_analysis(feedback_df, sales_df)\n"
    ]
   },
@@ -429,12 +428,6 @@
     "\n",
     "Since the p-value is greater than 0.05, we fail to reject the null hypothesis. There is **no significant evidence** that higher feedback scores correlate with higher sales."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0b974abf",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
