--- a/pset-8/PSET8.ipynb
+++ b/pset-8/PSET8.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e66c40b5",
    "metadata": {},
    "outputs": [
@@ -178,11 +178,11 @@
    "source": [
     "#function: Sales Analysis\n",
     "def sales_analysis(df_sales):\n",
-    "    # Split data before and after March 2023 campaign\n",
+    "    #split data before and after March 2023 campaign\n",
     "    before = df_sales[df_sales['date'] < '2023-03-01']['sales'].values\n",
     "    after = df_sales[df_sales['date'] > '2023-03-31']['sales'].values\n",
     "\n",
-    "    # Perform independent t-test\n",
+    "    #perform independent t-test\n",
     "    statistic, p_val = stats.ttest_ind(before, after, equal_var=False)\n",
     "\n",
     "    print(\"Sales analysis t-test statistic:\", statistic)\n",
@@ -190,7 +190,7 @@
     "\n",
     "    return statistic, p_val\n",
     "\n",
-    "# Run sales analysis\n",
+    "#run sales analysis\n",
     "sales_stat, sales_p = sales_analysis(sales_df)"
    ]
   },
@@ -432,9 +432,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
