--- a/pset 9/PSET9.ipynb
+++ b/pset 9/PSET9.ipynb
@@ -5,10 +5,10 @@
    "id": "1116f1fa",
    "metadata": {},
    "source": [
-    "### 1. Data Preparation:\n",
-    "Load data from customer_feedback.csv and sales_data.csv into pandas data frames.\n",
+    "### 1. Data Loading and Preprocessing:\n",
+    "Load stock_n_hl_news.csv into DataFrame df.\n",
     "\n",
-    "Convert the 'date' column in both datasets to pandas datetime objects for analysis."
+    "Convert 'Date' column to datetime format."
    ]
   },
   {
@@ -21,57 +21,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Customer Feedback Data Shape: (500, 3)\n",
-      "        date  product  feedback_score\n",
-      "0 2023-02-22      iOS               5\n",
-      "1 2023-05-22  Android               2\n",
-      "2 2022-11-22      iOS               2\n",
-      "3 2022-11-26  Android              10\n",
-      "4 2023-04-26      iOS               1\n",
-      "          date  product  feedback_score\n",
-      "495 2023-03-18  Android               5\n",
-      "496 2023-02-05      iOS               7\n",
-      "497 2023-03-29  Android               5\n",
-      "498 2023-02-08      iOS               3\n",
-      "499 2022-11-28  Android               9\n",
+      "Shape: (483, 7)\n",
+      "         Date       AAPL       NASDAQ          NYA        SP500          DJI  \\\n",
+      "0  2017-12-18  41.653164  6994.759766  12785.79980  2690.159912  24792.19922   \n",
+      "1  2017-12-19  41.209293  6963.850098  12747.50000  2681.469971  24754.69922   \n",
+      "2  2017-12-20  41.164425  6960.959961  12747.59961  2679.250000  24726.69922   \n",
+      "3  2017-12-21  41.320255  6965.359863  12800.20020  2684.570068  24782.30078   \n",
+      "4  2017-12-22  41.320255  6959.959961  12797.40039  2683.340088  24754.09961   \n",
       "\n",
-      "Sales Data Shape: (500, 3)\n",
-      "        date  product  sales\n",
-      "0 2022-12-12      iOS    473\n",
-      "1 2022-12-12  Android    919\n",
-      "2 2023-06-24      iOS    805\n",
-      "3 2023-06-24  Android    996\n",
-      "4 2023-10-20      iOS    792\n",
-      "          date  product  sales\n",
-      "495 2023-06-28  Android    446\n",
-      "496 2023-01-23      iOS    247\n",
-      "497 2023-01-23  Android    373\n",
-      "498 2022-12-22      iOS    816\n",
-      "499 2022-12-22  Android    913\n"
+      "                                            Headline  \n",
+      "0  France saves Marquis de Sade’s 120 Days of Sod...  \n",
+      "1  House prices to fall in London and south-east ...  \n",
+      "2  Hedge funds fail to stop 'billion-dollar brain...  \n",
+      "3  Guardian Brexit watch  \\n\\n\\n  Brexit helped p...  \n",
+      "4  Jim Cramer broke down why owning fewer stocks ...  \n",
+      "datetime64[ns]\n",
+      "        Date       AAPL       NASDAQ          NYA        SP500          DJI  \\\n",
+      "0 2017-12-18  41.653164  6994.759766  12785.79980  2690.159912  24792.19922   \n",
+      "1 2017-12-19  41.209293  6963.850098  12747.50000  2681.469971  24754.69922   \n",
+      "2 2017-12-20  41.164425  6960.959961  12747.59961  2679.250000  24726.69922   \n",
+      "3 2017-12-21  41.320255  6965.359863  12800.20020  2684.570068  24782.30078   \n",
+      "4 2017-12-22  41.320255  6959.959961  12797.40039  2683.340088  24754.09961   \n",
+      "\n",
+      "                                            Headline  \n",
+      "0  France saves Marquis de Sade’s 120 Days of Sod...  \n",
+      "1  House prices to fall in London and south-east ...  \n",
+      "2  Hedge funds fail to stop 'billion-dollar brain...  \n",
+      "3  Guardian Brexit watch  \\n\\n\\n  Brexit helped p...  \n",
+      "4  Jim Cramer broke down why owning fewer stocks ...  \n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy import stats\n",
     "\n",
     "#load data\n",
-    "feedback_df = pd.read_csv('customer_feedback.csv')\n",
-    "sales_df = pd.read_csv('sales_data.csv')\n",
+    "df = pd.read_csv('stock_n_hl_news.csv')\n",
+    "print(\"Shape:\", df.shape)\n",
+    "print(df.head())\n",
     "\n",
-    "#convert 'date' to datetime format\n",
-    "feedback_df['date'] = pd.to_datetime(feedback_df['date'])\n",
-    "sales_df['date'] = pd.to_datetime(sales_df['date'])\n",
-    "\n",
-    "#show info\n",
-    "print(\"Customer Feedback Data Shape:\", feedback_df.shape)\n",
-    "print(feedback_df.head())\n",
-    "print(feedback_df.tail())\n",
-    "\n",
-    "print(\"\\nSales Data Shape:\", sales_df.shape)\n",
-    "print(sales_df.head())\n",
-    "print(sales_df.tail())"
+    "#convert 'Date' to datetime\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "print(df.dtypes['Date'])\n",
+    "print(df.head())"
    ]
   },
   {
@@ -79,26 +71,22 @@
    "id": "509b030a",
    "metadata": {},
    "source": [
-    "### 2. Customer Feedback Analysis (feedback_analysis function):\n",
+    "### 2. Market Trend Column:\n",
     "\n",
-    "Determine the appropriate T-Test (independent, paired, one-tail, or two-tail) based on\n",
-    "data and hypothesis.\n",
+    "In df, create a column 'Trend'.\n",
     "\n",
     "Convert the feedback scores into a 2-dimensional numpy array (iOS scores as the first\n",
     "dimension, Android scores as the second).\n",
     "\n",
-    "Compute and return the t-test statistic and the pvalue and print the returned values.\n",
+    "Label 'Trend' as 'Bullish' if NASDAQ index is higher than the previous day, 'Bearish'\n",
+    "otherwise.\n",
     "\n",
-    "Analyze if there's a significant difference in average customer satisfaction between iOS\n",
-    "and Android apps.\n",
-    "\n",
-    "Interpret the result, i.e., if the p-value is significant for average customer satisfaction\n",
-    "between the two groups.\n"
+    "Assume 'Bullish' for the first date in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0fa3228b",
    "metadata": {},
    "outputs": [
@@ -106,28 +94,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feedback analysis t-test statistic: 1.9033888211703986\n",
-      "Feedback analysis pvalue: 0.05756609386358278\n"
+      "        Date       NASDAQ    Trend\n",
+      "0 2017-12-18  6994.759766  Bullish\n",
+      "1 2017-12-19  6963.850098  Bearish\n",
+      "2 2017-12-20  6960.959961  Bearish\n",
+      "3 2017-12-21  6965.359863  Bullish\n",
+      "4 2017-12-22  6959.959961  Bearish\n",
+      "Trend\n",
+      "Bullish    275\n",
+      "Bearish    208\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "#function: Feedback Analysis\n",
-    "def feedback_analysis(df_feedback):\n",
-    "    #separate scores by platform\n",
-    "    ios_scores = df_feedback[df_feedback['product'] == 'iOS']['feedback_score'].values\n",
-    "    android_scores = df_feedback[df_feedback['product'] == 'Android']['feedback_score'].values\n",
+    "import numpy as np\n",
     "\n",
-    "    #perform two-sample independent t-test\n",
-    "    statistic, p_val = stats.ttest_ind(ios_scores, android_scores, equal_var=False)\n",
-    "    \n",
-    "    print(\"Feedback analysis t-test statistic:\", statistic)\n",
-    "    print(\"Feedback analysis pvalue:\", p_val)\n",
-    "    \n",
-    "    return statistic, p_val\n",
+    "#generate trend\n",
+    "df['Trend'] = np.where(df['NASDAQ'].diff() > 0, 'Bullish', 'Bearish')\n",
+    "#set the first available day to Bullish\n",
+    "df.loc[0, 'Trend'] = 'Bullish'\n",
     "\n",
-    "#run feedback analysis\n",
-    "feedback_stat, feedback_p = feedback_analysis(feedback_df)"
+    "#verify\n",
+    "print(df[['Date','NASDAQ','Trend']].head())\n",
+    "print(df['Trend'].value_counts())"
    ]
   },
   {
