--- a/pset 9/PSET9.ipynb
+++ b/pset 9/PSET9.ipynb
@@ -273,15 +273,24 @@
    "metadata": {},
    "source": [
     "### Interpretation: Linear Regression Analysis\n",
-    "Coefficient for StmScore: Examine the estimated slope—if it is close to zero, sentiment has minimal impact on price.\n",
     "\n",
-    "P-value: A p-value > 0.05 for StmScore indicates the relationship is not statistically significant.\n",
+    "1.\tSlope (-59.06):\n",
     "\n",
-    "R-squared: A low R² (e.g., < 0.02) shows that sentiment explains very little of Apple’s price variability.\n",
+    "\tA 0.1 increase in sentiment score is associated with a $5.91 decrease in AAPL price on average, holding other factors constant.\n",
     "\n",
-    "Conclusion: Based on the regression summary, headline sentiment alone does not meaningfully predict Apple’s closing price over the sample period.\n",
-    "python\n",
-    "import statsmodels.api as sm\n"
+    "\tThe negative sign is counterintuitive if we expected positive headlines to boost price; it may reflect overfitting to noise or lagged market responses.\n",
+    "\n",
+    "2.\tStatistical Significance (p = 0.0016):\n",
+    "\n",
+    "\tThe p-value for StmScore is well below 0.05, indicating the relationship is statistically significant—headline sentiment has a nonzero association with same-day AAPL prices in our sample.\n",
+    "    \n",
+    "3.\tR-squared (≈0.02):\n",
+    "\n",
+    "\tOnly about 2% of the variation in AAPL closing price is explained by headline sentiment.\n",
+    "\n",
+    "\tDespite significance, the explanatory power is minimal, suggesting other factors dominate price movements.\n",
+    "\n",
+    "While the regression indicates a statistically significant (negative) link between same‐day sentiment and AAPL price, the very low R² reveals that sentiment alone is a poor predictor of actual closing prices. Market dynamics are driven by a complex mix of fundamentals, broader index movements, and lagged news effects not captured by a single‐day sentiment score.\n"
    ]
   },
   {
@@ -389,18 +398,25 @@
    "metadata": {},
    "source": [
     "### Interpretation: Logistic Regression for Trend Prediction\n",
-    "Accuracy: The model’s overall accuracy (~57%) closely mirrors the baseline rate of the majority (Bullish) class, indicating limited discriminatory power.\n",
+    "1.\tBias Toward Bullish:\n",
     "\n",
-    "Precision & Recall: High recall for Bullish but zero recall for Bearish shows the model fails to identify Bearish days.\n",
+    "\tThe model classifies all test samples as Bullish, achieving an accuracy equal to the underlying 57% share of Bullish days.\n",
     "\n",
-    "ROC AUC: A modest AUC (~0.56) suggests performance only slightly better than random guessing.\n",
+    "2.\tZero Bearish Detection:\n",
     "\n",
-    "Key Takeaway: With only sentiment score as input, logistic regression cannot reliably predict daily market trends. Incorporating additional market indicators and handling class imbalance would be necessary to improve predictive performance.\n",
-    "python\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
-    "import matplotlib.pyplot as plt\n"
+    "\tRecall = 0 for Bearish: the model fails to identify any Bearish days, indicating that sentiment score alone does not discriminate downward days.\n",
+    "\n",
+    "3.\tROC AUC ~0.55:\n",
+    "\n",
+    "\tPerformance is only slightly above random guessing (0.50), confirming weak predictive power.\n",
+    "\n",
+    "4.\tCoefficient Insight:\n",
+    "\n",
+    "\tA positive coefficient (0.6433) means higher sentiment scores increase the probability of a Bullish prediction, but magnitude and model fit are insufficient.\n",
+    "\t\n",
+    "5.\tConclusion:\n",
+    "\n",
+    "\tHeadline sentiment score by itself is not an effective predictor of daily market direction. Incorporating additional features (technical indicators, lagged returns, volatility) and addressing class imbalance are necessary for meaningful trend prediction.\n"
    ]
   },
   {
